--- a/boletines/assets/css/main.css
+++ b/boletines/assets/css/main.css
@@ -18,6 +18,10 @@ a{
   color: rgb(189, 99, 126);
 }
 
+img{
+  max-width: 100%;
+}
+
 .title{
   text-transform: uppercase; /*Todas en mayúscula*/
   text-align: center;
@@ -49,15 +53,33 @@ a{
   max-width: 960px;
   max-height: 500px;
   width: 100%;
-  height: 100%;
+  height: 80vh;
   background-color: white;
   /* box-shadow: diferenciaHorizontal diferenciaVertical desenfoque amplitud color; */
   /* Ejemplo 1: box-shadow: 0 3px 6px 2.5px rgb( 254, 248, 236); */
   /* Sombra realista */
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   /* border-radius: 4px;*/
+  border-radius: 4px;
   position: relative; /* Elemento posicionado */
-  padding: 1.8em; /*Espacio a los lados*/
+  overflow: scroll;
+  /*overflow-y: scroll;*/
+  /*overflow-x: hidden;*/
+}
+
+.content{
+  padding: 1em;
+}
+td{
+  display: block;
+  width: 100%;
+}
+td:nth-of-type(1){
+  font-size: 1.5em;
+  font-weight: bold;
+}
+th{
+  display: none;
 }
 
 .actions{
@@ -120,7 +142,7 @@ respecto al padre table.*/
 .position{
   background: #eac4d5;
   color: white;
-  padding: 10px;
+  padding: 0.5em;
   border-radius: 30px 60px;
   margin-right: 0.2em;
 }
@@ -130,11 +152,35 @@ respecto al padre table.*/
   color:  #eac4d5;
   font-size: 1.2em;
   font-weight: 75;
-
+  margin-top: 2em;
+  display: inline-block; /* Se pone esto pues los elementos que por defecto son inline en la propiedad display ignoran el margen*/
 }
 
 .main-image{
   float: left;
   margin-right: 1em;
   height: 250px;
+}
+
+@media(min-width:900px){
+  th{
+    display: table-cell;
+  }
+  td{
+    width: auto;
+    display: table-cell;
+  }
+  td:nth-of-type(1){
+    font-size: 1em;
+  }
+  .content{
+    padding: 1.8em; /*Espacio a los lados*/
+  }
+  
+}
+
+@media (min-height:550px){
+  .content{
+    height: 500px;
+  }
 }
